# behave-modern-console-report

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
behave_modern_console_report/: __init__.py  base.py  collector.py  colors.py  config.py  console.py  formatter.py  icons.py  models.py  progress.py  render.py  renderer.py  statistics.py  themes.py  utils.py
behave_modern_console_report/formatters/: __init__.py  ci.py  log.py  minimal.py  modern.py  modern_live.py  modern_test.py  modern_tqdm.py  progress.py
docs/: CONTRIBUTING.md  architecture.md  ci-cd.md  configuration.md  usage.md
examples/: README.md  behave.ini  environment.py  run_examples.py
examples/features/: cart.feature  checkout.feature  login.feature  product_catalog.feature
examples/steps/: cart_steps.py  catalog_steps.py  checkout_steps.py  login_steps.py
tests/: __init__.py  conftest.py  test_collector.py  test_config.py  test_formatter.py  test_models.py  test_progress.py  test_renderer.py  test_statistics.py  test_themes.py  test_utils.py
